# TraderAI-Desktop

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  DECISIONS.md  README.md  STATUS.md  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: router.py  system.py
apps/api/app/core/: config.py  correlation.py
apps/api/app/db/: session.py
apps/api/migrations/: env.py  script.py.mako
apps/api/migrations/versions/: 0001_scaffold.py
apps/api/tests/: test_health.py  test_ready.py
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/market-data/: pyproject.toml
apps/market-data/market_data/: config.py  main.py
apps/market-data/tests/: test_fake_provider.py
apps/worker/: pyproject.toml
apps/worker/tests/: test_health_task.py
apps/worker/worker/: celery_app.py
docs/: CODEX_IMPLEMENTATION_PLAN.md
docs/adr/: ADR-001-versiones-tecnologicas.md  ADR-002-postgres-redis.md  ADR-003-desktop-boundary.md  ADR-007-monorepo-layout.md
docs/architecture/: SYSTEM_ARCHITECTURE.md
docs/operations/: ENVIRONMENT_AUDIT.md  LOCAL_DEVELOPMENT.md
docs/testing/: TEST_STRATEGY.md
infrastructure/docker/: api.Dockerfile  market-data.Dockerfile  worker.Dockerfile
infrastructure/scripts/: wait-for-health.py
scripts/: check-no-real-trading.ps1  check-no-real-trading.sh
(+5 files in other folders)
