[project]
name = "traderai-api"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = ["fastapi==0.139.0", "uvicorn[standard]>=0.38.0", "pydantic==2.13.4", "pydantic-settings>=2.12.0", "sqlalchemy==2.0.51", "psycopg[binary]>=3.3.2", "redis>=7.1.0", "alembic>=1.17.2", "traderai-domain"]
[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.14.8", "mypy>=1.19.0"]
[tool.uv.sources]
traderai-domain = { workspace = true }
